<resources>
    <string name="app_name">TrashBusters</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="account_registration">Account Registration</string>
    <string name="back">BACK</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="submit">Submit</string>
    <string name="amount_of_recycle">Amount of Recycle</string>
    <string name="pick_up_time">Pick up time</string>
    <string name="lb">lb</string>
    <string name="button">Button</string>
    <string name="amount_of_trash">Amount of Trash</string>
    <string name="trash_me">Trash Me</string>

</resources>
